--- a/src/css/style.css
+++ b/src/css/style.css
@@ -184,3 +184,81 @@ li > :nth-child(2){
 .products .selectMenu li:nth-child(2) .title::before {
     background-image: url('../img/delete.png');
 }
+
+.content {
+    grid-area: content;
+    padding: 30px;
+    margin: 0 10%;
+}
+
+.top .selectMenu li:nth-child(1) .title::before {
+    background-image: url('../img/completed.png');
+}
+
+.list {
+    margin: 30px 0;
+}
+
+.list input[type="checkbox"] {
+    appearance: none;
+    position: absolute;
+    right: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-right: 15px;
+    width: 25px;
+    height: 25px;
+    border: 2px solid black;
+    border-radius: 50px;
+    display: grid;
+    place-content: center;
+    cursor: pointer;
+}
+
+.list input[type="checkbox"]::before {
+    content: "";
+    width: 20px;
+    height: 20px;
+    transform: scale(0);
+    transition: 120ms transform ease-in-out;
+    background-image: url('../img/check.png');
+    background-size: cover;
+}
+
+.list input[type="checkbox"]:checked::before {
+    transform: scale(.9);
+    filter: invert(21%) sepia(98%) saturate(4405%) hue-rotate(109deg) brightness(95%) contrast(102%);
+}
+
+.list input[type="checkbox"]:checked {
+    border-color: green;
+}
+
+.list input[type="checkbox"]:hover {
+    outline: 2px solid currentColor;
+    outline-offset: 2px;
+}
+
+.list > ul {
+    border-bottom: 1px solid black;
+}
+
+.list li:hover .option {
+    display: flex;
+}
+
+.option {
+    display: none;
+    align-self: flex-start;
+    align-items: center;
+    column-gap: 20px;
+}
+
+.option > button:nth-child(1) {
+    background-image: url('../img/edit.png');
+
+}
+.option > button:nth-child(2) {
+    background-image: url('../img/calendar.png');
+
+}
