--- a/src/css/style.css
+++ b/src/css/style.css
@@ -85,7 +85,8 @@ li > :nth-child(2){
 
 .menu .title,
 .productList .title,
-.products .title {
+.products .title,
+.list li {
     cursor: pointer;
     padding: 10px 0;
 }
@@ -114,6 +115,7 @@ li > :nth-child(2){
 .menu .title::before,
 .productList .title::before,
 .selectMenu .title::before,
+.option > .title
 {
     content: '';
     width: 25px;
