--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,6 +46,8 @@ button {
 
 header {
     grid-area: header;
+    display: flex;
+    align-items: center;
     padding: 0px 30px;
     background-color: var(--header-background-color)
 }
