--- a/src/css/style.css
+++ b/src/css/style.css
@@ -91,7 +91,7 @@ li > :nth-child(2){
 .menu .title,
 .productList .title,
 .products .title,
-.list li {
+.taskList li {
     cursor: pointer;
     padding: 10px 0;
 }
@@ -215,11 +215,13 @@ li > :nth-child(2){
     font-size: 2rem;
 }
 
-.list {
+.taskList {
     margin: 30px 0;
 }
 
-.list input[type="checkbox"] {
+
+/* custom checkbox */
+.taskList input[type="checkbox"] {
     appearance: none;
     position: absolute;
     right: 100%;
@@ -235,7 +237,7 @@ li > :nth-child(2){
     cursor: pointer;
 }
 
-.list input[type="checkbox"]::before {
+.taskList input[type="checkbox"]::before {
     content: "";
     width: 20px;
     height: 20px;
@@ -245,22 +247,22 @@ li > :nth-child(2){
     background-size: cover;
 }
 
-.list input[type="checkbox"]:checked::before {
+.taskList input[type="checkbox"]:checked::before {
     transform: scale(.9);
     filter: invert(21%) sepia(98%) saturate(4405%) hue-rotate(109deg) brightness(95%) contrast(102%);
 }
 
-.list input[type="checkbox"]:checked {
+.taskList input[type="checkbox"]:checked {
     border-color: var(--checkbox-color);
 }
 
-.list input[type="checkbox"]:hover {
+.taskList input[type="checkbox"]:hover {
     outline: 2px solid currentColor;
     outline-offset: 2px;
 }
 
 
-.list > ul {
+.taskList > ul {
     border-bottom: 1px solid var(--main-dark-color);
 }
 
