Change to productForm to control dropdown menu

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -539,6 +539,9 @@ input[type="date"]:focus {
     overflow: scroll;
 }
 
+.productForm.showDropdown .colorButton{
+    border-radius: 5px 5px 0 0;
+}
 
 .dropdown {
     visibility: hidden;
